<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true">
	<LinearLayout 
		android:orientation="vertical"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content">
		
		<LinearLayout
		    android:orientation="horizontal"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content">
	
			<TextView style="@style/InfoText"
			    android:layout_width="wrap_content"
				android:layout_height="wrap_content" 
				android:text="@string/email" />
			<EditText
			    android:id="@+id/emailField" 
			  	android:layout_width="fill_parent"
				android:layout_height="wrap_content" 
				android:layout_weight="1"
				android:hint="@string/feedbackemail"  
    			android:inputType="textEmailAddress" />
		</LinearLayout>
		<LinearLayout
		    android:orientation="horizontal"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content">
	
			<TextView style="@style/InfoText"
			    android:layout_width="wrap_content"
				android:layout_height="wrap_content" 
				android:text="@string/subject" />
			<EditText
			    android:id="@+id/subjectField" 
			  	android:layout_width="fill_parent"
				android:layout_height="wrap_content" 
				android:layout_weight="1"
				android:hint="@string/optional"/>
		</LinearLayout>
			
		<TextView style="@style/InfoText"
		    android:layout_width="wrap_content"
			android:layout_height="wrap_content" 
			android:text="@string/message" />
		<EditText
		    android:id="@+id/messageField" 
		  	android:layout_width="fill_parent"
			android:layout_height="wrap_content" 
			android:layout_weight="1"
			android:hint="@string/optional"/>
	
		<LinearLayout
		    android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:gravity="center_vertical">
	        <Button
	            android:id="@+id/sendButton"
	            android:layout_width="0dip"
	            android:layout_weight="1.0"
	            android:layout_height="wrap_content" 
	            android:text="@string/send"
	            android:onClick="sendList" />
		</LinearLayout>
	</LinearLayout>	
</ScrollView>