<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical"
	android:layout_width="fill_parent"
	android:layout_height="wrap_content">
	
	<LinearLayout
	    android:orientation="horizontal"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content">

		<TextView style="@style/InfoText"
		    android:layout_width="wrap_content"
			android:layout_height="wrap_content" 
			android:text="@string/title" />
		<EditText
		    android:id="@+id/itemEditTitleField" 
		  	android:layout_width="fill_parent"
			android:layout_height="wrap_content" 
			android:layout_weight="1"
			android:singleLine="true"
			android:maxLength="20"/>
	</LinearLayout>
	
	<TextView style="@style/InfoText"
	    android:layout_width="wrap_content"
		android:layout_height="wrap_content" 
		android:text="@string/description" />
	<EditText android:id="@+id/itemEditDescField" android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_weight="1"
		android:scrollbars="vertical" />

	<Button
	    android:id="@+id/confirmButton"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_gravity="center_horizontal"
	    android:text="@string/confirm" />

</LinearLayout>